; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_svndump.c_reset_node_ctx.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_svndump.c_reset_node_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64, i64, i32, i64, i32, i32, i64 }

@node_ctx = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@NODEACT_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @reset_node_ctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_node_ctx(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 8), align 8
  %3 = load i32, i32* @NODEACT_UNKNOWN, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 7), align 4
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 0), align 8
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 1), align 4
  %4 = call i32 @strbuf_reset(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 6))
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 5), align 8
  %5 = call i32 @strbuf_reset(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 4))
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @strbuf_addstr(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 4), i8* %9)
  br label %11

11:                                               ; preds = %8, %1
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @node_ctx, i32 0, i32 2), align 8
  ret void
}

declare dso_local i32 @strbuf_reset(i32*) #1

declare dso_local i32 @strbuf_addstr(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
